half end ES6 Advanced Class from DIO

--- a/ES6AdvClass00/index.html
+++ b/ES6AdvClass00/index.html
@@ -6,7 +6,15 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-        <button type="button" onclick="questimc()">Calcular IMC</button>
-        <h3 id="ResultIMC" onclick="redirect()"></h3>
+        <button type="button" onclick="oldSum()">Sum with old fucttion</button>
+        <h3 id="ResultOldSum"></h3>
+        <button type="button" onclick="sumArrow()">Sum using Arrow functions</button>
+        <h3 id="ResultArrow"></h3>
+        <button type="button" onclick="objectArrow()">An Object created with Arrow
+            functrion</button>
+        <h3 id="newObject"></h3>
+
     </body>
+
+
 </html>
